tests/script_runtime_errors/patch_copy_key_exists/error.txt
Error: 
    1 | patch {"a": 1, "b": 2} of
    2 |   copy "a" => "b"
      |   ^^^^^^^^^^^^^^^ The key that is supposed to be written to already exists: b
    3 | end